--- a/html/currentInternship.html
+++ b/html/currentInternship.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style src="../css/style.css"></style>
-</head>
-<body>
+    <script src="../javascript/index.js"></script>
+  </head>
+  <body>
     <a src="../html/index.html" class="button">Back</a>
     <div id="internship"></div>
-    <script src="../javascript/index.js"></script>
-</body>
+  </body>
 </html>
