[chore] [bug] fixed gui, but back a tag won't work

--- a/html/currentInternship.html
+++ b/html/currentInternship.html
@@ -8,7 +8,7 @@
     <script src="../javascript/index.js"></script>
   </head>
   <body>
-    <a src="../html/index.html" class="button">Back</a>
+    <a src="index.html" class="button">Back</a>
     <div id="internship"></div>
   </body>
 </html>
