--- a/html/index.html
+++ b/html/index.html
@@ -1,20 +1,21 @@
 <html>
-    <header>
-        <style src="../css/style.css"></style>
-    </header>
-    <head>Welcome to Internship Tracker CLI</head>
+    <head>
+    <style>
+        @import url(../css/style.css)
+    </style>
+    </head>
     <body>
         <div class="container">
             <h1><span class="text-primary">Current</span> Internships</h1>
-            <a href="currentInternship.html"><img src="../images/Wheels.png"></a>
+            <a href="./currentInternship.html"><img src="../images/Wheels.png" width="300" height="300"></a>
         </div>
         <div class="container">
             <h1><span class="text-primary">Added</span> Internships</h1>
-            <a href="addedInternship.html"><img src="../images/Wheels.png"></a>
+            <a href="./addedInternship.html"><img src="../images/Wheels.png" width="300" height="300"></a>
         </div>
         <div class="container">
             <h1><span class="text-primary">Rejected</span> Internships</h1>
-            <a href="rejectedInternship.html"><img src="../images/Wheels.png"></a>
+            <a href="./rejectedInternship.html"><img src="../images/Wheels.png" width="300" height="300"></a>
         </div>
     </body>
 </html>
