[chore] fixed on go file

--- a/html/index.html
+++ b/html/index.html
@@ -7,15 +7,15 @@
     <body>
         <div class="container">
             <h1><span class="text-primary">Current</span> Internships</h1>
-            <a href="./currentInternship.html"><img src="../images/Wheels.png" width="300" height="300"></a>
+            <a href="currentInternship.html"><img src="../images/Wheels.png" width="300" height="300"></a>
         </div>
         <div class="container">
             <h1><span class="text-primary">Added</span> Internships</h1>
-            <a href="./addedInternship.html"><img src="../images/Wheels.png" width="300" height="300"></a>
+            <a href="addedInternship.html"><img src="../images/Wheels.png" width="300" height="300"></a>
         </div>
         <div class="container">
             <h1><span class="text-primary">Rejected</span> Internships</h1>
-            <a href="./rejectedInternship.html"><img src="../images/Wheels.png" width="300" height="300"></a>
+            <a href="rejectedInternship.html"><img src="../images/Wheels.png" width="300" height="300"></a>
         </div>
     </body>
 </html>
