[bug] bug fixed for backwards linking not working

--- a/html/addedInternship.html
+++ b/html/addedInternship.html
@@ -8,7 +8,7 @@
     <script src="../javascript/added.js"></script>
   </head>
   <body>
-    <a href="../html/index.html" class="button">Back</a>
+    <a href="index.html" class="button">Back</a>
     <div id="added"></div>
   </body>
 </html>
