--- a/html/currentInternship.html
+++ b/html/currentInternship.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style src="../css/style.css"></style>
-    <script src="../javascript/index.js"></script>
+    <script src="../javascript/current.js"></script>
   </head>
   <body>
-    <a src="index.html" class="button">Back</a>
-    <div id="internship"></div>
+    <a href="index.html" class="button">Back</a>
+    <div id="added"></div>
   </body>
 </html>
