--- a/html/index.html
+++ b/html/index.html
@@ -1,21 +1,27 @@
 <html>
-    <head>
+  <head>
     <style>
-        @import url(../css/style.css)
+      @import url(../css/style.css);
     </style>
-    </head>
-    <body>
-        <div class="container">
-            <h1><span class="text-primary">Current</span> Internships</h1>
-            <a href="currentInternship.html"><img src="../images/Wheels.png" width="300" height="300"></a>
-        </div>
-        <div class="container">
-            <h1><span class="text-primary">Added</span> Internships</h1>
-            <a href="addedInternship.html"><img src="../images/Wheels.png" width="300" height="300"></a>
-        </div>
-        <div class="container">
-            <h1><span class="text-primary">Rejected</span> Internships</h1>
-            <a href="rejectedInternship.html"><img src="../images/Wheels.png" width="300" height="300"></a>
-        </div>
-    </body>
+  </head>
+  <body>
+    <div class="container">
+      <h1><span class="text-primary">Current</span> Internships</h1>
+      <a href="currentInternship.html"
+        ><img src="../images/Wheels.png" width="300" height="300"
+      /></a>
+    </div>
+    <div class="container">
+      <h1><span class="text-primary">Added</span> Internships</h1>
+      <a href="addedInternship.html"
+        ><img src="../images/Wheels.png" width="300" height="300"
+      /></a>
+    </div>
+    <div class="container">
+      <h1><span class="text-primary">Rejected</span> Internships</h1>
+      <a href="rejectedInternship.html"
+        ><img src="../images/Wheels.png" width="300" height="300"
+      /></a>
+    </div>
+  </body>
 </html>
