--- a/html/rejectedInternship.html
+++ b/html/rejectedInternship.html
@@ -8,7 +8,7 @@
     <script src="../javascript/rejected.js"></script>
   </head>
   <body>
-    <a src="../html/index.html" class="button">Back</a>
+    <a href="index.html" class="button">Back</a>
     <div id="added"></div>
   </body>
 </html>
