--- a/html/currentInternship.html
+++ b/html/currentInternship.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <a href="index.html" class="button">Back</a>
-    <div id="added"></div>
+    <input type="file" name="inputfile" id="inputfile" />
   </body>
 </html>
