--- a/html/rejectedInternship.html
+++ b/html/rejectedInternship.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <a href="index.html" class="button">Back</a>
-    <div id="added"></div>
+    <div id="rejected"></div>
   </body>
 </html>
